<resources>

    <string name="app_name">Ejercicio2</string>
    <string name="texto_nombre">"El Alumno es: "</string>
    <string name="texto_letrero">"Agenda FI "</string>
    <string name="nombreAlu">"Nombre del Alumno: "</string>
    <string name="apAlu">"Apellido Paterno: "</string>
    <string name="amAlu">"Apellido Materno: "</string>
    <string name="genAlu">"Genero (M/F): "</string>
    <string name="noCuenta">"No de Cuenta: "</string>
    <string name="boton1">"Registrar "</string>
    <string name="boton2">"Ver Lista "</string>
    <string name="cuenAlu">"No de Cuenta "</string>



</resources>